swagger for chartRequestByCreationDate
